--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -37,9 +37,9 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
-            <h1 class="logo me-auto"><a href="index">S W&nbsp;<span>Infotech</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
-            <!--a href="index" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a-->
+            <a href="index" class="logo me-auto d-none d-sm-block"><img src="assets/img/logo.jpg" alt="" style="border-radius: 10px;"></a>
+            <h1 class="logo me-auto"><a href="index">S W&nbsp;<span>Infotech</span></a></h1>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
