--- a/views/index.ejs
+++ b/views/index.ejs
@@ -524,11 +524,11 @@
                 <div class="testimonial-wrap">
                     <div class="testimonial-item">
                         <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                        <h3>Jena Karlis</h3>
+                        <h3>Aditya Thakur</h3>
                         <h4>Store Owner</h4>
                         <p>
                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                            Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                            The system has produced a significant competitive advantage in the business thanks to 'SW Infotech' well-thought opinions.
                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                         </p>
                     </div>
