--- a/views/index.ejs
+++ b/views/index.ejs
@@ -537,11 +537,11 @@
                 <div class="testimonial-wrap">
                     <div class="testimonial-item">
                         <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                        <h3>Matt Brandon</h3>
-                        <h4>Freelancer</h4>
+                        <h3>Dr. Manab Singh</h3>
+                        <h4>Director</h4>
                         <p>
                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                            Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                            The 'SW Infotech' theam succeeded in building a more manageable solution that is much easier to maintain. Due to their effort our hospital become digitized.
                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                         </p>
                     </div>
