--- a/views/index.ejs
+++ b/views/index.ejs
@@ -537,7 +537,7 @@
                 <div class="testimonial-wrap">
                     <div class="testimonial-item">
                         <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                        <h3>Dr. Manab Singh</h3>
+                        <h3>Dr. Manav Singh</h3>
                         <h4>Director</h4>
                         <p>
                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
