--- a/views/index.ejs
+++ b/views/index.ejs
@@ -196,7 +196,7 @@
                             <ul>
                                 <li><i class="ri-check-double-line"></i> The domain, hosting, play/ app store, ssl etc. cost will be totally separate from the project.</li>
                                 <li><i class="ri-check-double-line"></i> The yearly maintanence charge (AMC) would be 33% of the total cost of the project.</li>
-                                <li><i class="ri-check-double-line"></i> If you want to hire one of our developers the International charges would be $10/Hr. and $70/day.</li>
+                                <li><i class="ri-check-double-line"></i> If you want to hire one of our developers the International charges would be $15/Hr. and $100/day per developer.</li>
 
                             </ul>
                         </div>
@@ -683,7 +683,7 @@
                     <a data-bs-toggle="collapse" data-bs-target="#faq5" class="collapsed">To hire a developer, what would be the cost per day or per hour? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
                     <div id="faq5" class="collapse" data-bs-parent=".faq-list">
                         <p class="text-justify">
-                            During International Projects we work $10/hour and $70/day. Also we work on project basis, that is fixed after the requirement analysis of the project.
+                            During International Projects we work $15/hour and $100/day per developer. Also we work on project basis, that is fixed after the requirement analysis of the project.
                         </p>
                     </div>
                 </li>
