--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,15 +40,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top i {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 24px;
   width: 40px;
   height: 40px;
   border-radius: 4px;
   background: #f70407;
   color: #fff;
+  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
@@ -62,7 +69,8 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
-    transition-delay: 0 !important;
+    -webkit-transition-delay: 0 !important;
+            transition-delay: 0 !important;
   }
 }
 
@@ -71,6 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #header {
   background: #04032d;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
@@ -78,7 +87,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #header.header-scrolled {
   padding: 12px 0;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 #header .logo {
@@ -122,6 +132,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -135,6 +147,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   position: relative;
   color: #fff;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   font-size: 15px;
   font-weight: 600;
@@ -155,7 +168,9 @@ h1, h2, h3, h4, h5, h6 {
   visibility: hidden;
   padding: 10px 0;
   background: #04032d;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  -webkit-box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+          box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -228,6 +243,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 4px;
   padding: 8px 25px;
   white-space: nowrap;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   font-size: 14px;
   font-weight: 600;
@@ -235,8 +251,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .get-started-btn:hover {
-  background: #111111;
-  color: #fff;
+  background: #ffffff;
+    color: #f70407;
 }
 
 @media (max-width: 992px) {
@@ -255,6 +271,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 0;
   background: none;
   font-size: 24px;
+  -webkit-transition: all 0.4s;
   transition: all 0.4s;
   outline: none !important;
   line-height: 1;
@@ -275,6 +292,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 9999;
   overflow-y: auto;
   background: #fff;
+  -webkit-transition: ease-in-out 0.2s;
   transition: ease-in-out 0.2s;
   opacity: 0;
   visibility: hidden;
@@ -337,6 +355,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(0, 0, 0, 0.6);
   overflow: hidden;
   display: none;
+  -webkit-transition: ease-in-out 0.2s;
   transition: ease-in-out 0.2s;
 }
 
@@ -396,6 +415,7 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-block;
   padding: 10px 30px;
   border-radius: 4px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
@@ -480,7 +500,8 @@ section {
   top: 60px;
   left: 0;
   right: 0;
-  transform: skewY(3deg);
+  -webkit-transform: skewY(3deg);
+          transform: skewY(3deg);
 }
 
 /*--------------------------------------------------------------
@@ -506,8 +527,11 @@ section {
 }
 
 .breadcrumbs ol {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   padding: 0 0 10px 0;
   margin: 0;
@@ -520,6 +544,7 @@ section {
 
 .breadcrumbs ol a:hover {
   color: #fff;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -538,15 +563,22 @@ section {
 # Clients
 --------------------------------------------------------------*/
 .clients .owl-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0 20px;
 }
 
 .clients .owl-item img {
   width: 60%;
   opacity: 0.5;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   -webkit-filter: grayscale(100);
   filter: grayscale(100);
@@ -602,12 +634,17 @@ section {
   padding: 8px 30px 9px 30px;
   color: #fff;
   border-radius: 50px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 13px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: 2px solid #f70407;
 }
 
@@ -666,7 +703,8 @@ section {
   width: 100%;
   position: relative;
   text-align: center;
-  box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.06);
+          box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
 }
 
@@ -674,14 +712,16 @@ section {
   position: absolute;
   top: -27px;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   font-size: 24px;
   background: #fff;
   padding: 12px;
   color: #f70407;
   border-radius: 50px;
   border: 2px solid #fff;
-  box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
 }
 
 .counts .count-box span {
@@ -708,12 +748,19 @@ section {
 .tabs .nav-link {
   border: 1px solid #b9b9b9;
   padding: 15px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   color: #111111;
   border-radius: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   cursor: pointer;
 }
 
@@ -791,8 +838,10 @@ section {
   padding: 30px;
   border-radius: 6px;
   background: #0a58ca;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
-  box-shadow: 5px 5px;
+  -webkit-box-shadow: 5px 5px;
+          box-shadow: 5px 5px;
 }
 
 .services .icon-box:hover {
@@ -814,6 +863,7 @@ section {
 
 .services .icon-box h4 a {
   color: #fff;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -855,6 +905,7 @@ section {
   text-transform: uppercase;
   color: #444444;
   margin-bottom: 5px;
+  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   border-radius: 3px;
 }
@@ -869,6 +920,7 @@ section {
 }
 
 .portfolio .portfolio-wrap {
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   position: relative;
   overflow: hidden;
@@ -884,12 +936,14 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
+  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
   z-index: 2;
   opacity: 0;
 }
 
 .portfolio .portfolio-wrap img {
+  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
 }
 
@@ -901,11 +955,21 @@ section {
   right: 0;
   bottom: 0;
   z-index: 3;
+  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding: 20px;
 }
 
@@ -934,6 +998,7 @@ section {
   margin: 0 5px 0 0;
   font-size: 28px;
   display: inline-block;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -946,7 +1011,8 @@ section {
 }
 
 .portfolio .portfolio-wrap:hover img {
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .portfolio .portfolio-wrap:hover .portfolio-info {
@@ -957,11 +1023,13 @@ section {
 # Testimonials
 --------------------------------------------------------------*/
 .testimonials .testimonial-item {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   padding: 30px;
   margin: 30px 15px;
   min-height: 200px;
-  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   position: relative;
   background: #fff;
   border-radius: 15px;
@@ -1114,11 +1182,13 @@ section {
   padding: 10px 40px 12px 40px;
   border-radius: 4px;
   color: #fff;
+  -webkit-transition: none;
   transition: none;
   font-size: 14px;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   border: 2px solid rgba(255, 255, 255, 0.3);
 }
@@ -1209,11 +1279,13 @@ section {
   bottom: 30px;
   right: 0;
   opacity: 0;
+  -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
   text-align: center;
 }
 
 .team .member .social a {
+  -webkit-transition: color 0.3s;
   transition: color 0.3s;
   color: #111111;
   margin: 0 3px;
@@ -1223,6 +1295,7 @@ section {
   height: 36px;
   background: #f70407;
   display: inline-block;
+  -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
   color: #fff;
 }
@@ -1271,7 +1344,8 @@ section {
 .contact .info-box {
   color: #444444;
   text-align: center;
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  -webkit-box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+          box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
   padding: 30px 0 32px 0;
   border-radius: 4px;
 }
@@ -1299,7 +1373,8 @@ section {
 }
 
 .contact .php-email-form {
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  -webkit-box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+          box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
   padding: 30px;
   border-radius: 4px;
 }
@@ -1359,7 +1434,8 @@ section {
 }
 
 .contact .php-email-form input, .contact .php-email-form textarea {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   font-size: 14px;
   border-radius: 4px;
 }
@@ -1381,6 +1457,7 @@ section {
   border: 0;
   padding: 10px 32px;
   color: #fff;
+  -webkit-transition: 0.4s;
   transition: 0.4s;
   border-radius: 4px;
 }
@@ -1391,19 +1468,23 @@ section {
 
 @-webkit-keyframes animate-loading {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
 @keyframes animate-loading {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
@@ -1447,7 +1528,8 @@ section {
   right: 0;
   bottom: -70px;
   background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   z-index: 2;
 }
 
@@ -1501,7 +1583,8 @@ section {
 .blog .entry {
   padding: 30px;
   margin-bottom: 60px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 .blog .entry .entry-img {
@@ -1519,6 +1602,7 @@ section {
 
 .blog .entry .entry-title a {
   color: #111111;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -1532,8 +1616,11 @@ section {
 }
 
 .blog .entry .entry-meta ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -1569,6 +1656,7 @@ section {
   background: #f70407;
   color: #fff;
   padding: 6px 20px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   font-size: 14px;
 }
@@ -1641,6 +1729,7 @@ section {
 
 .blog .entry .entry-footer a {
   color: #8b8b8b;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -1691,7 +1780,8 @@ section {
 .blog .blog-author {
   padding: 20px;
   margin-bottom: 30px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 .blog .blog-author img {
@@ -1746,6 +1836,7 @@ section {
 .blog .blog-comments .comment h5 a {
   font-weight: bold;
   color: #444444;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -1777,7 +1868,8 @@ section {
 .blog .blog-comments .reply-form {
   margin-top: 30px;
   padding: 30px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 .blog .blog-comments .reply-form h4 {
@@ -1796,7 +1888,8 @@ section {
 }
 
 .blog .blog-comments .reply-form input:focus {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border-color: #ee9293;
 }
 
@@ -1807,7 +1900,8 @@ section {
 }
 
 .blog .blog-comments .reply-form textarea:focus {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border-color: #ee9293;
 }
 
@@ -1831,6 +1925,8 @@ section {
 }
 
 .blog .blog-pagination ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-left: 0;
   list-style: none;
@@ -1839,6 +1935,7 @@ section {
 .blog .blog-pagination li {
   border: 1px solid white;
   margin: 0 5px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -1875,7 +1972,8 @@ section {
 .blog .sidebar {
   padding: 30px;
   margin: 0 0 60px 20px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 .blog .sidebar .sidebar-title {
@@ -1917,6 +2015,7 @@ section {
   margin: -1px;
   background: #f70407;
   color: #fff;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
 }
@@ -1965,6 +2064,7 @@ section {
 
 .blog .sidebar .recent-posts h4 a {
   color: black;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -2000,6 +2100,7 @@ section {
   margin: 0 6px 8px 0;
   border: 1px solid #c4c4c4;
   display: inline-block;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -2087,8 +2188,12 @@ section {
 
 #footer .footer-top .footer-links ul li {
   padding: 10px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
@@ -2097,6 +2202,7 @@ section {
 
 #footer .footer-top .footer-links ul a {
   color: #aaaaaa;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
@@ -2144,9 +2250,11 @@ section {
   padding: 0 20px;
   background: #f70407;
   color: #fff;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 #footer .footer-newsletter form input[type="submit"]:hover {
@@ -2170,6 +2278,7 @@ section {
   text-align: center;
   width: 36px;
   height: 36px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
