--- a/views/index.ejs
+++ b/views/index.ejs
@@ -734,7 +734,7 @@
                 <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                     <div class="member" data-aos="fade-up" data-aos-delay="200">
                         <div class="member-img">
-                            <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/team/team-2.png" class="img-fluid" alt="">
                             <div class="social">
                                 <a href=""><i class="icofont-twitter"></i></a>
                                 <a href=""><i class="icofont-facebook"></i></a>
@@ -784,7 +784,7 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="col-12 text-center "><a href="all-employee"><button class="get-started-btn">View More</button></a></div>
             </div>
 
         </div>
