--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -39,8 +39,8 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index" class="logo me-auto d-none d-sm-block"><img src="assets/img/logo.jpg" alt="" style="border-radius: 10px;"></a>
-            <h1 class="logo me-auto"><a href="index">S W&nbsp;<span>Infotech</span></a></h1>
+            <a href="https://swinfotech.in/" class="logo me-auto d-none d-sm-block"><img src="assets/img/logo.jpg" alt="" style="border-radius: 10px;"></a>
+            <h1 class="logo me-auto"><a href="https://swinfotech.in/">S W&nbsp;<span>Infotech</span></a></h1>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
