--team member disabled

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/bootstrap/5/css/bootstrap.min.css" />
     <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/dmxAppConnect/dmxRouting/dmxRouting.js"></script>
+    <script src="/dmxAppConnect/dmxRouting/dmxRouting.js" defer=""></script>
     <link rel="stylesheet" href="/css/style.css" />
     <!-- Custom Links -->
     <!-- Favicons -->
@@ -32,6 +32,7 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
+    <script src="/dmxAppConnect/dmxBootstrap5Navigation/dmxBootstrap5Navigation.js" defer=""></script>
 </head>
 
 <body is="dmx-app" id="main">
@@ -48,7 +49,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="#">Team</a></li>
                     <!--li><a href="#">Blog</a></li>
                       <li class="drop-down"><a href="">Drop Down</a>
                         <ul>
