--- a/views/all-employee.ejs
+++ b/views/all-employee.ejs
@@ -1,6 +1,6 @@
 <!-- Wappler include head-page="layouts/main" fontawesome_5="cdn" bootstrap5="local" is="dmx-app" id="allemployee" appConnect="local" -->
 <meta name="ac:route" content="/all-employee">
-<!-- New Wappler Page -->
+
 <!-- ======= Testimonials Section ======= -->
 <section id="testimonials" class="testimonials mt-5">
     <div class="container" data-aos="fade-up">
@@ -81,7 +81,7 @@
     </div>
 </section><!-- End Testimonials Section -->
 <!-- ======= Team Section ======= -->
-<section id="team" class="team section-bg">
+<!-- <section id="team" class="team section-bg">
     <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -233,4 +233,93 @@
         </div>
 
     </div>
-</section><!-- End Team Section -->
+</section> -->
+<!-- End Team Section -->
+
+<!-- from index page -->
+<!-- <section id="team" class="team section-bg">
+    <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+            <h2>Our Talented Team Members</h2>
+            <p></p>
+        </div>
+
+        <div class="row">
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                        <div class="social">
+                            <a href=""><i class="icofont-twitter"></i></a>
+                            <a href=""><i class="icofont-facebook"></i></a>
+                            <a href=""><i class="icofont-instagram"></i></a>
+                            <a href=""><i class="icofont-linkedin"></i></a>
+                        </div>
+                    </div>
+                    <div class="member-info">
+                        <h4>Harshit Maheshwari</h4>
+                        <span>CEO &amp; Founder</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                <div class="member" data-aos="fade-up" data-aos-delay="200">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-2.png" class="img-fluid" alt="">
+                        <div class="social">
+                            <a href=""><i class="icofont-twitter"></i></a>
+                            <a href=""><i class="icofont-facebook"></i></a>
+                            <a href=""><i class="icofont-instagram"></i></a>
+                            <a href=""><i class="icofont-linkedin"></i></a>
+                        </div>
+                    </div>
+                    <div class="member-info">
+                        <h4>Ariful Islam</h4>
+                        <span>Full Stack Developer</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                <div class="member" data-aos="fade-up" data-aos-delay="300">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                        <div class="social">
+                            <a href=""><i class="icofont-twitter"></i></a>
+                            <a href=""><i class="icofont-facebook"></i></a>
+                            <a href=""><i class="icofont-instagram"></i></a>
+                            <a href=""><i class="icofont-linkedin"></i></a>
+                        </div>
+                    </div>
+                    <div class="member-info">
+                        <h4>Praveen Sundriyal</h4>
+                        <span>Android Developer</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                <div class="member" data-aos="fade-up" data-aos-delay="400">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                        <div class="social">
+                            <a href=""><i class="icofont-twitter"></i></a>
+                            <a href=""><i class="icofont-facebook"></i></a>
+                            <a href=""><i class="icofont-instagram"></i></a>
+                            <a href=""><i class="icofont-linkedin"></i></a>
+                        </div>
+                    </div>
+                    <div class="member-info">
+                        <h4>Prasann Kumar</h4>
+                        <span>Accountant</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 text-center "><a href="all-employee"><button class="get-started-btn">View More</button></a></div>
+        </div>
+
+    </div>
+</section> -->
