--- a/views/all-employee.ejs
+++ b/views/all-employee.ejs
@@ -79,9 +79,10 @@
         </div>
 
     </div>
-</section><!-- End Testimonials Section -->
+</section>
+<!-- End Testimonials Section -->
 <!-- ======= Team Section ======= -->
-<!-- <section id="team" class="team section-bg">
+<section id="team" class="team section-bg">
     <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -182,23 +183,6 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="fade-up" data-aos-delay="400">
                     <div class="member-img">
-                        <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
-                        <div class="social">
-                            <a href=""><i class="icofont-twitter"></i></a>
-                            <a href=""><i class="icofont-facebook"></i></a>
-                            <a href=""><i class="icofont-instagram"></i></a>
-                            <a href=""><i class="icofont-linkedin"></i></a>
-                        </div>
-                    </div>
-                    <div class="member-info">
-                        <h4>Priydarshan Semwal</h4>
-                        <span>Support Executive</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                <div class="member" data-aos="fade-up" data-aos-delay="400">
-                    <div class="member-img">
                         <img src="assets/img/team/team-7.jpg" class="img-fluid" alt="">
                         <div class="social">
                             <a href=""><i class="icofont-twitter"></i></a>
@@ -233,93 +217,5 @@
         </div>
 
     </div>
-</section> -->
+</section>
 <!-- End Team Section -->
-
-<!-- from index page -->
-<!-- <section id="team" class="team section-bg">
-    <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-            <h2>Our Talented Team Members</h2>
-            <p></p>
-        </div>
-
-        <div class="row">
-
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                <div class="member" data-aos="fade-up" data-aos-delay="100">
-                    <div class="member-img">
-                        <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                        <div class="social">
-                            <a href=""><i class="icofont-twitter"></i></a>
-                            <a href=""><i class="icofont-facebook"></i></a>
-                            <a href=""><i class="icofont-instagram"></i></a>
-                            <a href=""><i class="icofont-linkedin"></i></a>
-                        </div>
-                    </div>
-                    <div class="member-info">
-                        <h4>Harshit Maheshwari</h4>
-                        <span>CEO &amp; Founder</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                <div class="member" data-aos="fade-up" data-aos-delay="200">
-                    <div class="member-img">
-                        <img src="assets/img/team/team-2.png" class="img-fluid" alt="">
-                        <div class="social">
-                            <a href=""><i class="icofont-twitter"></i></a>
-                            <a href=""><i class="icofont-facebook"></i></a>
-                            <a href=""><i class="icofont-instagram"></i></a>
-                            <a href=""><i class="icofont-linkedin"></i></a>
-                        </div>
-                    </div>
-                    <div class="member-info">
-                        <h4>Ariful Islam</h4>
-                        <span>Full Stack Developer</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                <div class="member" data-aos="fade-up" data-aos-delay="300">
-                    <div class="member-img">
-                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                        <div class="social">
-                            <a href=""><i class="icofont-twitter"></i></a>
-                            <a href=""><i class="icofont-facebook"></i></a>
-                            <a href=""><i class="icofont-instagram"></i></a>
-                            <a href=""><i class="icofont-linkedin"></i></a>
-                        </div>
-                    </div>
-                    <div class="member-info">
-                        <h4>Praveen Sundriyal</h4>
-                        <span>Android Developer</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                <div class="member" data-aos="fade-up" data-aos-delay="400">
-                    <div class="member-img">
-                        <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                        <div class="social">
-                            <a href=""><i class="icofont-twitter"></i></a>
-                            <a href=""><i class="icofont-facebook"></i></a>
-                            <a href=""><i class="icofont-instagram"></i></a>
-                            <a href=""><i class="icofont-linkedin"></i></a>
-                        </div>
-                    </div>
-                    <div class="member-info">
-                        <h4>Prasann Kumar</h4>
-                        <span>Accountant</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 text-center "><a href="all-employee"><button class="get-started-btn">View More</button></a></div>
-        </div>
-
-    </div>
-</section> -->
