--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -49,7 +49,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#">Team</a></li>
+                    <li><a href="#team">Team</a></li>
                     <!--li><a href="#">Blog</a></li>
                       <li class="drop-down"><a href="">Drop Down</a>
                         <ul>
