--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -91,7 +91,7 @@
                             Dehradun, UK 248001<br>
                             India <br><br>
                             <strong>Phone:</strong> +91 6396 0908 35<br>
-                            <strong>Email:</strong> info@swinfotech.com<br>
+                            <strong>Email:</strong> admin@swinfotech.com<br>
                         </p>
                     </div>
 
