--- a/views/index.ejs
+++ b/views/index.ejs
@@ -816,7 +816,7 @@
                             <div class="info-box mt-4">
                                 <i class="bx bx-envelope"></i>
                                 <h3>Email Us</h3>
-                                <p>info@swinfotech.com<br>sales@swinfotech.com</p>
+                                <p>admin@swinfotech.com</p>
                             </div>
                         </div>
                         <div class="col-md-6">
